# pancakestack

./: Cargo.toml  README.md  example.pancake
benches/: bench.rs
examples/: countdown_bin.pancake  div10.pancake  long.pancake
src/: command.rs  interpret.rs  interpreter.rs  lib.rs  parse.rs
tests/: basic.rs  cat.pancake
