[package]
name = "pancakestack"
version = "0.6.0"
description = "Rust implementation of the Pancake Stack esoteric programming language."
readme = "README.md"
repository = "https://github.com/OpenByteDev/pancakestack"
homepage = "https://github.com/OpenByteDev/pancakestack"
documentation = "https://docs.rs/pancakestack"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2018"
categories = ["parser-implementations"]
keywords = ["pancake", "stack", "esoteric", "parser", "interpreter"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
"regex" = "1.9"
"lazy-regex" = "3.0"
"unicode-segmentation" = "1.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false
