[package]
name = "pancakestack"
version = "0.6.1"
description = "Rust implementation of the Pancake Stack esoteric programming language."
readme = "README.md"
repository = "https://github.com/OpenByteDev/pancakestack"
homepage = "https://github.com/OpenByteDev/pancakestack"
documentation = "https://docs.rs/pancakestack"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2018"
categories = ["parser-implementations"]
keywords = ["pancake", "stack", "esoteric", "parser", "interpreter"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
"regex" = "1.11"
"lazy-regex" = "3.4"
"unicode-segmentation" = "1.12"

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "bench"
harness = false
